--- a/Lai_en.tex
+++ b/Lai_en.tex
@@ -12,7 +12,7 @@
 
 \documentclass[11pt,a4paper,nolmodern]{moderncv}
 
-\usepackage{RaphaelPinson}
+\usepackage{cv}
 \address{Chemin du Jura 3}{1041~Poliez-le-Grand}{Switzerland}
 
 \usepackage[english]{babel}
